--- a/services.html
+++ b/services.html
@@ -2,9 +2,5 @@
 <head>
 <title>Contacters</title>
 </head>
-<body>
-	<h1>Hyderabad</h1>
-	 <h2>500072</h2>
-	 <h3>India</h3>
-</body>
+<body></body>
 </html>
